--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "better-sqlite3": "^12.4.6",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
